<resources>
    <string name="app_name">WifiDirectDemo</string>

    <!-- Peers -->
    <string name="start_discovery">Start discovery</string>
    <string name="create_group">Create group</string>
    <string name="connect">Connect</string>
    <string name="send_data">Send data</string>
    <string name="create_access_point">Create access point</string>
    <string name="disconnect">Disconnect</string>
    <string name="get_group_info">get group info</string>
    <string name="connect_to_ap">Connect to AP</string>
    <string name="send_multicast">Send multicast</string>
    <string name="start_as_server">Start as server</string>
    <string name="start_as_client">Start as client</string>

</resources>
