<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/peer_details_tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/peer_details_btn_connect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect" />

    <Button
        android:id="@+id/peer_details_btn_get_group_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_group_info" />

    <Button
        android:id="@+id/peer_details_btn_connect_to_ap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connect_to_ap" />

    <Button
        android:id="@+id/peer_details_btn_disconnect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/disconnect" />

    <Button
        android:id="@+id/peer_details_btn_send_data"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_data" />

    <Button
        android:id="@+id/peer_details_btn_send_multicast"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/send_multicast" />

</LinearLayout>